ges-launch: memory error for multiple clips
When running with two test clips
ges-launch-1.0 +test-clip "blue" start=0 duration=5 +test-clip "green" start=5 duration=5
on completion, we get a critical error.
(ges-launch-1.0:10414): GStreamer-CRITICAL **: 13:54:31.313: gst_object_unref: assertion '((GObject *) object)->ref_count > 0' failed